# grs

./: .gitignore  Cargo.toml  README.md  index.html  justfile
assets/: cssMode-DbiX4VCX.js  cssMode-TdP_tj-U.js  cssMode-j05jNhEt.js  freemarker2-CFoYwf6I.js  freemarker2-CIM58I0n.js  freemarker2-Cy7PZLU5.js  grs_wasm_bg-BW3KOlW0.wasm  handlebars-BMz_1v0G.js  handlebars-C0uQReq4.js  handlebars-DwT6ByDz.js  html-B-Vx48dD.js  html-ByaNsZKF.js  html-ygPf9uEG.js  htmlMode-9upbT-v1.js  htmlMode-BS8d6tpr.js  htmlMode-DmZVi7l_.js  index-B9YilzBO.js  index-BUHbjQja.css  index-CIboZcZx.js  index-CbEoPXX_.css  index-WurX0HwE.css  index-XEdh8BlH.js  javascript-DL3AwmCq.js  javascript-ZPAWlJ22.js  javascript-u11Lraib.js  jsonMode-02lkXG3S.js  jsonMode-DYRat1sZ.js  jsonMode-DpVEgW-M.js  liquid-B9grfvUz.js  liquid-Bw-ksn5X.js  liquid-ksKZBNsc.js  mdx-CY5GnEKZ.js  mdx-DAbLvI9-.js  mdx-DtNYixPb.js  python-DO7XtpxK.js  python-Xjdrx09J.js  python-jlBQF3Zh.js  razor-CTF60-ac.js  razor-DxYgzzHX.js  razor-i6P4X56z.js  (+12 more)
benches/: bench.rs
crates/grs/: Cargo.toml
crates/grs/benches/: bench.rs
crates/grs/src/: cli.rs  diagnostic.rs  doc.rs  lib.rs  linter.rs  macros.rs  main.rs  range.rs  registry.rs  text_diff.rs  tokenizer.rs
crates/grs/src/rules/: accents.rs  ambiguous_char.rs  duplicated_word.rs  final_n.rs  forbidden_accent.rs  forbidden_char.rs  missing_accent_capital.rs  missing_double_accents.rs  mixed_scripts.rs  mod.rs  outdated_spelling.rs  punctuation.rs
crates/grs_wasm/: Cargo.toml
crates/grs_wasm/src/: lib.rs
extension/: README.md  manifest.json  popup.html
extension/js/: background.js  content.js  popup.js
playground/: README.md  package.json  vite.config.ts
playground/src/: App.tsx  Editor.tsx  Header.tsx
src/: cli.rs  constants.rs  diagnostic.rs  doc.rs  final_n.rs  lib.rs  linter.rs  main.rs  missing_double_accents.rs  range.rs  registry.rs  text_diff.rs  tokenizer.rs
src/rules/: accents.rs  ambiguous_char.rs  duplicated_word.rs  final_n.rs  forbidden_accent.rs  forbidden_char.rs  missing_accent_capital.rs  missing_double_accents.rs  mixed_scripts.rs  mod.rs  outdated_spelling.rs
