[package]
name = "grs"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
clap = { version = "4.5.23", features = ["derive", "string"] }
colored = "3.0.0"
grac = { git = "https://github.com/daxida/grac" }
itertools = "0.14.0"
similar = "2.6.0"
strum = "0.27.0"
strum_macros = "0.27.0"
unicode-normalization = "0.1.24"
serde = { version = "1.0.217", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
serde = ["dep:serde"]

[[bench]]
name = "bench"
harness = false
