[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.83"
repository = "https://github.com/daxida/grs"
license = "MIT"

[workspace.dependencies]
grs = { path = "crates/grs" }
grs_wasm = { path = "crates/grs_wasm" }

# Grac-related
clap = { version = "4.5.23" }
colored = "3.0.0"
criterion = "0.5.1"
grac = { git = "https://github.com/daxida/grac" }
itertools = "0.14.0"
similar = "2.6.0"
strum = "0.27.0"
strum_macros = "0.27.0"
unicode-normalization = { version = "0.1.24" }
serde = { version = "1.0.217" }

# Wasm-related
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
