[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/daxida/grs"
license = "MIT"

[workspace.dependencies]
grs = { path = "crates/grs" }
grs_wasm = { path = "crates/grs_wasm" }

# Grac-related
aho-corasick = { version = "1.1.3"}
clap = { version = "4.5.23" }
colored = { version = "3.0.0" }
criterion = { version = "0.5.1" }
grac = { git = "https://github.com/daxida/grac" }
itertools = { version = "0.14.0" }
similar = { version = "2.6.0" }
strum = { version = "0.27.0" }
strum_macros = { version = "0.27.0" }
unicode-normalization = { version = "0.1.24" }
serde = { version = "1.0.217" }

# Wasm-related
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["console"] }
