[package]
name = "grs"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Greek rule-based spell checker"

[lib]

[dependencies]
clap = { workspace = true, features = ["derive", "string"] }
colored = { workspace = true }

grac = { workspace = true }
itertools = { workspace = true }
similar = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
unicode-normalization = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
serde = ["dep:serde"]

[[bench]]
name = "bench"
harness = false
