[package]
name = "grs"
version = "0.1.3"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = "Greek rule-based spell checker"
authors = { workspace = true }
license = { workspace = true }

[lib]

[dependencies]
clap = { workspace = true, features = ["derive", "string"] }
clap_complete = { workspace = true }
colored = { workspace = true }

grac = { workspace = true }
itertools = { workspace = true }
similar = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
unicode-normalization = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
aho-corasick = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
serde = ["dep:serde"]

[[bench]]
name = "bench"
harness = false
